--- a/Sample.html
+++ b/Sample.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>Sample</title>
+        <link rel="stylesheet" href="mycss.css">
     </head>
     <body>
-        Welcome to First Application
+        <h1>Welcome to First Application</h1>
     </body>
 </html>
