--- a/register.html
+++ b/register.html
@@ -8,5 +8,48 @@
 </head>
 <body>
     <h1>This is RegisterPage</h1>
+    <form>
+        <table>
+            <tr>
+                <td>Username</td>
+                <td><input type="text"/></td>
+            </tr>
+            <tr>
+                <td>Password</td>
+                <td><input type="text"/></td>
+            </tr>
+            <tr>
+                <td>EmailId</td>
+                <td><input type="text"/></td>
+            </tr>
+            <tr>
+                <td>Course</td>
+                <td>
+                    <select>
+                        <option>MCA</option>
+                        <option>MS</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Gender</td>
+                <td>
+                    Male<input type="radio" name="gen"/>
+                    Female<input type="radio" name="gen"/>
+                </td>
+            </tr>
+            <tr>
+                <td>Department</td>
+                <td>
+                    UG:<input type="checkbox"/>
+                    PG:<input type="checkbox"/>
+                </td>
+            </tr>
+            <tr>
+                <td><input type="submit"/></td>
+            </tr>
+        </table>
+    </form>
+
 </body>
 </html>
