--- a/view.html
+++ b/view.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1
+        {
+            background-color: blue;
+            font-style: italic;
+            font-family: 'Times New Roman', Times, serif;
+        }
+    </style>
 </head>
 <body>
     <h1>This is View Page</h1>
     <table border="1" width="50%" height="50%" cellpadding="6" cellspacing="6">
-        <th>Name</th>
+        <th style="color:aqua;font-family:'Courier New', Courier, monospace">Name</th>
         <th>Age</th>
         <th>Address</th>
         <tr>
