--- a/login.html
+++ b/login.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .style1
+        {
+            background-color: aqua;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        #style2
+        {
+            font-style: italic;
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
-    <h1>This is loginpage</h1>
+    <h1 class="style1">This is loginpage</h1>
     <form>
-        <label>UserName</label>
+        <label id="style2">UserName</label>
         <input type="text" />
         <label>Password</label>
         <input type="password"/>
